# rl-arena

./: .gitignore  LICENSE  README.md  launch_carracing_dqn.sh  launch_cartpole_dqn.sh  launch_cartpole_ppo.sh  launch_cartpole_trpo.sh  launch_cartpole_vpg.sh  launch_lunarlander_dqn.sh  launch_pong_dqn.sh  launch_pong_vpg.sh  pyproject.toml  setup.py
configs/: envs.json
models/: CartPole-v1.pth  DQN-CartPole-v1.pth  DQN-LunarLander-v3.pth  PPO-CartPole-v1.pth  TRPO-CartPole-v1.pth  VPG-CartPole-v1.pth  VPGAgent-CartPole-v1.pth
rl_arena/: __init__.py  main.py  models.py  run_model.py
rl_arena/agents/: __init__.py  base_agent.py  dqn.py  grpo.py  ppo.py  trpo.py  vpg.py
scripts/: launch_breakout_dqn.sh  launch_cartpole_dqn.sh  launch_cartpole_ppo.sh  launch_cartpole_trpo.sh  launch_cartpole_vpg.sh  launch_pong_dqn.sh  launch_pong_trpo.sh  launch_pong_vpg.sh
src/: dqn.py  main.py  models.py  ppo.py  trpo.py  utils.py  vpg.py
