[project]
name = "rl-arena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ale-py>=0.10.2",
    "gymnasium[accept-rom-license,ale,atari,box2d,classic-control]>=1.0.0",
    "ipdb>=0.13.13",
    "opencv-python>=4.11.0.86",
    "stable-baselines3>=2.5.0",
    "swig>=4.3.0",
]
